@@ -22,12 +22,28 @@ C: dcm
 E: mierla@fokus.fraunhofer.de
 D:
 
+N: Gabriel Vasile
+C: gabriel
+E:
+D:
+
+N: Greg Fausak
+C: lgfausak
+E:
+D:
+
 N: Jan Janak
 C: janakj
 E: jan@iptel.org
 W: http://iptel.org/~janakj
 P: F8190A31   FCC0 3F4A 1ACB 84C2 505C  573E CC03 B08E F819 0A31
 D:
+
+N: Jamey Hicks
+C: jamey
+E: 
+D:
+
 
 N: Jiri Kuthan
 C: jiri
