@@ -1,0 +1,36 @@
+Current ser core team in alphabetical order as of 23 November 2004:
+
+Andrei Pelinescu - Onciul
+Bogdan Andrei Iancu
+Daniel-Constantin Mierla
+Jan Janak
+Jiri Kuthan
+
+
+Contributors:
+
+Adrian Georgescu
+Dan Pascu
+Greg Fausak
+Jamey Hicks
+Juha Heinanen
+Maxim Sobolev
+Miklos Tirpak
+Nils Ohlmeier
+Ramona-Elena Modroiu
+Raphael Coeffic
+
+
+Emeritus contributors (old ser contributors now off doing other things):
+
+Gabriel Vasile
+Ricardo Baratto
+Stelios Sidiroglou-Douskos
+
+
+Outstanding email support (ser users which helped a lot other people on 
+                           ser's mailing lists):
+
+Java Rockx
+Klaus Darilion
+Zeus Ng
