@@ -49,6 +49,4 @@ Mailing lists:
 serusers@iptel.org - ser user community
 .nf 
 serdev@iptel.org - ser development, new features and unstable version
-.PP
-For help/support, write an email to <serhelp@iptel.org>.
 
